update chatbot version and scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,25 +76,6 @@
 }
 
 
-
-::-webkit-scrollbar {
-  width: 1.3rem;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-  background: #797979;
-  transition: all 0.5s ease-in-out;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #222224;
-}
-
-::-webkit-scrollbar-track {
-  background: #f9f9f9;
-}
-
 h1 {
   @apply font-extrabold leading-tight text-4xl lg:text-4xl xl:text-5xl tracking-wide text-slate-800
 }
